--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-URI = "mongodb+srv://amey:tmsmongodbatlas@cluster0.gkue7.mongodb.net/TMS_Project?retryWrites=true&w=majority"
+URI = "mongodb+srv://admin:admin@cluster0.imnm7za.mongodb.net/TixFix?retryWrites=true&w=majority"
+URI-LOCAL = "mongodb://localhost:27017/TixFix"
 PORT = 3001
 
 # jwt
