--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 URI = "mongodb+srv://admin:admin@cluster0.imnm7za.mongodb.net/TixFix?retryWrites=true&w=majority"
-URI-LOCAL = "mongodb://localhost:27017/TixFix"
+LOCAL = "mongodb://localhost:27017/TixFix"
 PORT = 3001
 
 # jwt
